<resources>
    <string name="app_name">Cook For You</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_settings">Settings</string>
    <string name="card_food">Apples</string>
    <string name="card_amount">5</string>
    <string name="button_to_add_item">Button to add item</string>
    <string name="add_item_to_pantry">Add item to my pantry</string>
    <string name="breakfast">Breakfast</string>
    <string name="by_meals">My Recipe lists</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="random_recipe">Random recipe</string>
    <string name="i_m_feeling_lucky">I\'m feeling lucky…</string>
    <string name="list">List</string>
    <string name="favourites">Favourites</string>
    <string name="my_lists">My Lists</string>
    <string name="search_hint">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit_s">unit(s)</string>
    <string name="preparation">Preparation</string>
    <string name="description">Description</string>
    <string name="ingredient">Ingredient</string>
    <string name="unit">unit</string>
    <string name="amount">Amount</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="photo_of_recipe">Photo of recipe</string>
    <string name="logo">Logo</string>
    <string name="recipe_image">recipe image</string>
    <string name="my_favourites_title">My favourites</string>
    <string name="insert_unit">Insert unit</string>
    <string name="item_label">Item:</string>
    <string name="insert_item">Insert item</string>
    <string name="insert_amount">Insert amount</string>
    <string name="unit_label">Unit:</string>
    <string name="amount_label">Amount:</string>
    <string name="add_item">Add item</string>
    <string name="Zero">0</string>
    <string name="discover_based_on_your_pantry">Based on your Pantry</string>
</resources>