<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/favouritesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/favourites"
        app:layout_constraintBottom_toTopOf="@+id/myMealsTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTV2"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/favouritesB"
        android:layout_width="355dp"
        android:layout_height="86dp"
        android:layout_marginStart="18dp"
        android:text="@string/favourites"
        app:layout_constraintBottom_toTopOf="@+id/myMealsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/favouritesTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/my_lists"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myMealsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/by_meals"
        app:layout_constraintBottom_toTopOf="@+id/breakfastB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesB" />

    <Button
        android:id="@+id/breakfastB"
        android:layout_width="116dp"
        android:layout_height="86dp"
        android:text="@string/breakfast"
        app:layout_constraintBottom_toTopOf="@+id/discoverB"
        app:layout_constraintEnd_toStartOf="@+id/LunchB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myMealsTV"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/dinnerB"
        android:layout_width="116dp"
        android:layout_height="86dp"
        android:text="@string/dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LunchB"
        app:layout_constraintTop_toTopOf="@+id/LunchB" />

    <Button
        android:id="@+id/LunchB"
        android:layout_width="116dp"
        android:layout_height="86dp"
        android:text="@string/lunch"
        app:layout_constraintEnd_toStartOf="@+id/dinnerB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/breakfastB"
        app:layout_constraintTop_toTopOf="@+id/breakfastB" />

    <Button
        android:id="@+id/discoverB"
        android:layout_width="226dp"
        android:layout_height="69dp"
        android:text="@string/random_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverTV"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/discoverTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_feeling_lucky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfastB"
        app:layout_constraintVertical_bias="0.194" />


</androidx.constraintlayout.widget.ConstraintLayout>