<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cookforyou.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_myRecipesFragment"
            app:destination="@id/myRecipesFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.cookforyou.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.example.cookforyou.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.cookforyou.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/myRecipesFragment"
        android:name="com.example.cookforyou.ui.myRecipes.MyRecipesFragment"
        android:label="MyRecipesFragment" >
        <argument
            android:name="recipeName"
            app:argType="string"
            android:defaultValue="None" />
    </fragment>
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.cookforyou.ui.recipe.RecipeFragment"
        android:label="RecipeFragment" />
    <fragment
        android:id="@+id/addPantryItemFragment"
        android:name="com.example.cookforyou.ui.settings.AddPantryItemFragment"
        android:label="AddPantryItemFragment" />
</navigation>