<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="5dp"
    android:foreground="?android:selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="237dp"
            android:layout_height="23dp"
            android:layout_marginStart="20dp"
            android:text="@string/card_food"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/label_amount"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/label_amount"
            android:layout_width="31dp"
            android:layout_height="26dp"
            android:text="@string/card_amount"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/label_unit"
            card_view:layout_constraintEnd_toEndOf="@+id/label_unit"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="@+id/label_unit"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/unit_s"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/label_amount"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
