<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_preparation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/preparation"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.078"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_amount_ingredient3" />

                <TextView
                    android:id="@+id/label_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/description"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.073"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_preparation" />

                <TextView
                    android:id="@+id/label_ingredient2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/ingredient"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/label_unit_ingredient2"
                    app:layout_constraintTop_toBottomOf="@+id/label_ingredient1" />

                <TextView
                    android:id="@+id/label_unit_ingredient2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/label_amount_ingredient2"
                    app:layout_constraintTop_toBottomOf="@+id/label_unit_ingredient1" />

                <TextView
                    android:id="@+id/label_ingredient1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/ingredient"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_unit_ingredient1"
                    app:layout_constraintStart_toEndOf="@+id/label_unit_ingredient1"
                    app:layout_constraintTop_toTopOf="@+id/label_unit_ingredient1"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/label_ingredient3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/ingredient"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/label_unit_ingredient3"
                    app:layout_constraintTop_toBottomOf="@+id/label_ingredient2" />

                <TextView
                    android:id="@+id/label_unit_ingredient3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/label_amount_ingredient3"
                    app:layout_constraintTop_toBottomOf="@+id/label_unit_ingredient2" />

                <TextView
                    android:id="@+id/label_unit_ingredient1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/unit"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/label_amount_ingredient1"
                    app:layout_constraintStart_toEndOf="@+id/label_amount_ingredient1"
                    app:layout_constraintTop_toTopOf="@+id/label_amount_ingredient1" />

                <TextView
                    android:id="@+id/label_amount_ingredient3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/amount"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_amount_ingredient2" />

                <TextView
                    android:id="@+id/label_amount_ingredient1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/amount"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_recipe_ingredients" />

                <TextView
                    android:id="@+id/label_amount_ingredient2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/amount"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_amount_ingredient1" />

                <ImageView
                    android:id="@+id/recipe_imageView"
                    android:layout_width="255dp"
                    android:layout_height="168dp"
                    android:contentDescription="@string/photo_of_recipe"
                    app:layout_constraintBottom_toTopOf="@+id/label_recipe_ingredients"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_recipe_name"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/label_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_name"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/recipe_imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_recipe_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/label_unit_ingredient1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.077"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

